libdt_socket/socket_md.c(202) : warning C4996: 'gethostbyname': Use getaddrinfo() or GetAddrInfoW()

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 9
    • Component/s: core-svc
    • None
    • b01
    • windows

      In VS2013 SP4, gethostbyname has been deprecated. We should stop using deprecated functions.

      I'm disabling the warning by setting -D_WINSOCK_DEPRECATED_NO_WARNINGS for all jdk libraries in JDK-8080983. This bug is about correcting the issue so we may remove that workaround.

      The fix covers deprecated functions in lib net, nio and dt_socket.

      Note: makefiles using DISABLED_WARNINGS_microsoft including 4996 have explicitly disabled deprecated function warnings.

            Assignee:
            Gary Adams (Inactive)
            Reporter:
            Erik Joelsson
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: